[gd_scene load_steps=5 format=3 uid="uid://bymqlyv37570p"]

[ext_resource type="Script" uid="uid://thwqe1n5qca3" path="res://scenes/pause_menu.gd" id="1_6wg6m"]
[ext_resource type="Theme" uid="uid://cqcpovk8aw7nw" path="res://resources/retro_ui_theme.tres" id="2_uoyy8"]
[ext_resource type="PackedScene" uid="uid://3og35wgmg48k" path="res://resources/sfx/audio_controller.tscn" id="3_uoyy8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1834n"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wg6m")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -50.5
offset_right = 52.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1834n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_uoyy8")
text = "RESUME"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_uoyy8")
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_uoyy8")
text = "MAIN MENU"

[node name="AudioController" parent="." instance=ExtResource("3_uoyy8")]

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
